# smartconnect-client

./: .gitignore  README.md  cli.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: README.md  test-simple.yml  test.yml  tests.yml
smartconnect/: __init__.py  async_client.py  cache.py  data.py  er_sync_utils.py  exceptions.py  models.py  requirements.in  requirements.txt  smart_settings.py  utils.py
smartconnect_client/: cache.py  earthranger.py  local_logging.py  main.py  models.py  requirements.in  requirements.txt  smartconnect.py  transformer.py
tests/: conftest.py  test_async_client.py  test_async_session.py  test_cas.json  test_datamodel.xml  test_models.py  test_models_basic.py  test_session.py  test_smartconnect.py  test_smartconnect_client.py  test_utils.py
tests/data/: datamodel.xml  sample-configurablemodel.xml
