[tool.poetry]
name = "smartconnect-client"
version = "1.4.1"
description = ""
authors = ["Chris Doehring <***REMOVED***o@earthranger.com>"]

packages = [
    {include = "smartconnect" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
pydantic = "^1.8.2"
pytz = "^2021.1"
python-json-logger = "^2.0.2"
redis = "^3.5.3"
untangle = "^1.1.1"
dateparser = "^1.0.0"
timezonefinder = "^5.2.0"
environs= "^9.3.0"
numpy= "<1.21.7"
shapely = "^2.0.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
