[tool.poetry]
name = "smartconnect-client"
version = "1.9.0"
description = ""
authors = ["Chris Doehring <chrisdo@earthranger.com>"]

packages = [
    {include = "smartconnect" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^1.8.2"
pytz = "^2021.1"
python-json-logger = "^2.0.2"
redis = ">=3.5.3, <6.0.0"
untangle = "^1.1.1"
dateparser = "^1.0.0"
timezonefinder = "^5.2.0"
environs= "^9.3.0"
numpy= "<1.21.7"
shapely = "^2.0.1"
httpx = ">=0.24.0"
marshmallow = "<4.0.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.20"
pytest-mock = "^3.14.0"
pytest-cov = "^4.0"
respx = "^0.20.2"
requests-mock = "^1.12.1"
flake8 = "^6.0"
bandit = "^1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
