[tool.poetry]
name = "smartconnect-client"
version = "1.10.0"
description = ""
authors = ["Chris Doehring <chrisdo@earthranger.com>"]

packages = [
    {include = "smartconnect" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.0"
pytz = "^2025.0"
python-json-logger = "^3.0.0"
redis = "^6.0.0"
untangle = "^1.1.1"
dateparser = "^1.2.0"
timezonefinder = "^8.0.0"
environs= "^9.3.0"
numpy = ">=1.21.7,<2.0.0"
shapely = "^2.0.0"
httpx = "^0.28.0"
marshmallow = "<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.0"
respx = "^0.22.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
